# llmify

./: Cargo.toml  LICENSE.md
src/: clients.rs  lib.rs  main.rs  models.rs  prompts.rs
src/models/: mod.rs  openai.rs
src/prompts/: instructions.rs  mod.rs  prompt.rs  templates.rs
