[package]
name = "llmify"
version = "0.1.0"
edition = "2021"

[lib]
name = "llmify"
path = "src/lib.rs"

[[bin]]
name = "llmify"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
clap-stdin = "0.2.0"
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
